<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/champIconView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/champ_icon_alt"
                    android:scaleType="fitCenter" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3">

                <TextView
                    android:id="@+id/champNameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/champ_name_placeholder"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/champTitleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/champ_title_placeholder"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/champNameView" />

                <TextView
                    android:id="@+id/champBlurbView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/champ_blurb_placeholder"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/champTitleView" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/champBlurbView">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/infoDamageTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:scaleX="0.8"
                            android:scaleY="0.8"
                            android:text="@string/champ_info_template"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            app:drawableStartCompat="@drawable/damage_icon" />

                        <TextView
                            android:id="@+id/infoMagicTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:scaleX="0.8"
                            android:scaleY="0.8"
                            android:text="@string/champ_info_template"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            app:drawableStartCompat="@drawable/magic_icon" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/infoDefenseTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:scaleX="0.8"
                            android:scaleY="0.8"
                            android:text="@string/champ_info_template"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            app:drawableStartCompat="@drawable/defense_icon" />

                        <TextView
                            android:id="@+id/statSpeedTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:scaleX="0.8"
                            android:scaleY="0.8"
                            android:text="@string/champ_stat_template"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            app:drawableStartCompat="@drawable/ms_icon" />
                    </TableRow>
                </TableLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>